...
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_contact_picture_fallback" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:contentDescription="@string/open_the_gallery"
                    android:text="@string/open_the_gallery"
                    app:backgroundTint="@color/light"
                    app:fabCustomSize="40dp"
                    app:layout_constraintEnd_toStartOf="@+id/camera"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_photo"
                    app:rippleColor="@android:color/white"
                    app:srcCompat="@drawable/baseline_insert_photo_24" />

...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:contentDescription="@string/take_a_photo"
                    app:backgroundTint="@color/light"
                    app:fabCustomSize="40dp"
                    app:layout_constraintEnd_toStartOf="@+id/remove_photo"
                    app:layout_constraintStart_toEndOf="@+id/gallery"
                    app:layout_constraintTop_toBottomOf="@id/profile_photo"
                    app:rippleColor="@android:color/white"
                    app:srcCompat="@drawable/baseline_photo_camera_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
...
                android:id="@+id/username_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/profile_name_hint"
                    android:inputType="textCapWords"
                    android:drawablePadding="5dp"
...
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_create_account"
                    style="@style/WizardButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard_profile_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/skip_create_account"
                    style="@style/TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard_profile_skip"
                    android:textColor="@color/grey_500" />

...
