...
    <string name="ic_delete_menu">Delete</string>
    <string name="ic_advanced_menu">Advanced settings</string>
    <string name="ic_blacklist_menu">Blocked contacts</string>

    <!-- Strings related to account creation -->
    <string name="account_selection">Select account</string>
    <string name="add_ring_account_title">Add account</string>
    <string name="add_sip_account_title">Add SIP account</string>
    <string name="ring_account_default_name">Jami account %1$s</string>
    <string name="account_creation_error">An error occurred while creating the account.</string>

    <string name="prompt_alias">Alias</string>
    <string name="prompt_hostname">Hostname</string>
...
    <string name="account_rtp_max_port">Maximum</string>
    <string name="account_rtp_min_port">Minimum</string>
    <string name="account_rtp_port_range">Audio RTP port range</string>

    <!-- restore/backup -->
    <string name="account_new_device_password">Enter main password to unlock account</string>
    <string name="error_password_char_count">6 characters minimum</string>
    <string name="error_passwords_not_equals">Passwords do not match.</string>
    <string name="export_account_wait_title">Please wait…</string>
    <string name="export_account_wait_message">Exporting account information</string>
    <string name="account_export_file">Backup account</string>
    <string name="account_export_file_summary">Backup your account on your device to restore it later.</string>
    <string name="account_export_end_decryption_message">Incorrect password. Please try again with the correct password.</string>
    <string name="account_enter_password">Enter password</string>
...
    <string name="username_available">The username is available.</string>
    <string name="register_name">Register Name</string>
    <string name="trying_to_register_name">Username registration is in progress. Please wait…</string>
    <string name="registered_username">Registered username</string>
    <string name="register_username">Register public username</string>
    <string name="register_recommended">Recommended</string>
    <string name="username_already_taken">Username already taken</string>
    <string name="invalid_username">Invalid username</string>
    <string name="unknown_error">Unknown error. Please check your network connection!</string>
    <string name="looking_for_username_availability">Checking username availability…</string>
    <string name="account_status_connecting">Connecting</string>
    <string name="account_status_connection_error">Connection error</string>
    <string name="account_status_online">Online</string>
    <string name="account_status_unknown">Unknown</string>
...
    <string name="help_pin_info">Required if the account is password-encrypted.</string>
    <string name="account_link_device_button">Connect</string>

    <!-- Biometry -->
    <string name="account_biometry_auth_title">Unlock Jami account</string>
    <string name="account_biometry_auth_message">Use biometry to unlock your account</string>
    <string name="account_biometry_enroll_title">Use biometric authentication?</string>
    <string name="account_biometry_enroll_message">Your device supports secure biometric authentication.
Biometric or device authentication adds a convenient way to locally unlock access to your Jami account. You will still be able to use your password.</string>
    <string name="account_biometry_enroll_accept">Use biometrics</string>
    <string name="no_thanks">No thanks</string>

    <string name="account_biometry_enroll_auth_title">Add authentication for your Jami account</string>
    <string name="account_biometry_enroll_auth_message">Add secure biometric or device authentication as an alternative to your password</string>
    <string name="account_auth_error">Authentication error: %1$s</string>
    <string name="account_auth_success">Authentication succeeded</string>
    <string name="account_auth_key_error">An error occurred while decrypting the account key.</string>
...
