...
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/ring_password_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:checked="false"
            android:text="@string/wizard_password_placeholder" />
...
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:alpha="0.3"
                android:src="@drawable/baseline_lock_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_txt_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password,newPassword"
                    android:hint="@string/prompt_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ring_password_repeat_txt_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                android:layout_below="@id/password_txt_box"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ring_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password,newPassword"
                    android:hint="@string/prompt_new_password_repeat"
                    android:imeActionLabel="@string/action_create_short"
                    android:imeOptions="actionDone"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wizard_password_warning" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_password"
            style="@style/WizardButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/wizard_password_skip"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"/>
...
