...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_username_txt_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="18dp"
                app:startIconDrawable="@drawable/baseline_account_crop_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:hint="@string/prompt_hint_username"
                    android:inputType="text"
                    android:lines="1"
...
                app:layout_constraintBottom_toBottomOf="@id/input_username_txt_box"
                android:layout_marginRight="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_username"
            style="@style/WizardButton"
            android:layout_width="@dimen/wizard_card_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/wizard_username_button"
            android:enabled="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_username_skip"
            android:textColor="@color/grey_500"
            android:layout_gravity="center_horizontal"
...
